# propllia-template

./: CHANGELOG.md  Cargo.toml  README.md  justfile
extensions/admin/: Cargo.toml
extensions/admin/schema/: 001_admin_tables.sql  002_admin_seed.sql
extensions/admin/src/: error.rs  extension.rs  lib.rs
extensions/admin/src/api/: generic.rs  mod.rs  types.rs
extensions/admin/src/api/handlers/: audit.rs  auth.rs  contacts.rs  contracts.rs  dashboard.rs  export.rs  invoices.rs  mod.rs  pdf.rs  properties.rs  reports.rs  sepa_batches.rs  tenants.rs
extensions/admin/src/jobs/: mod.rs  register_oauth_client.rs
extensions/admin/src/services/: pdf.rs
extensions/mcp/systemprompt/: Cargo.toml
extensions/web/src/: assets.rs  config_loader.rs  extension.rs  lib.rs  partials.rs
services/agents/: welcome.yaml
services/config/: blog.yaml  config.yaml
services/content/: config.yaml
services/content/documentation/: ai-agent.md  api-auth.md  api-endpoints.md  banking.md  contracts.md  facturacion.md  getting-started.md  herramientas.md  index.md  installation.md  properties.md  tenants.md
services/content/legal/: cookies.md  privacidad.md  terminos.md
services/playbook/cli/: agents.md  logs.md  mesh.md  plugins.md  secrets.md  services.md
services/playbook/content/: blog.md  images.md  orchestration.md
services/playbook/guide/: ai-provider.md  discord.md  evolution.md  mesh-architecture.md  migrate-openclaw.md
services/scheduler/: config.yaml
services/web/: config.yaml
services/web/config/: demo.yaml  homepage.yaml  navigation.yaml  (+1 more)
src/: lib.rs
(+163 files in other folders)
